--- a/Grid.css
+++ b/Grid.css
@@ -3,6 +3,11 @@ body{
     font-style: italic;
     text-align:center;
 }
+.Menu{
+    text-align: center;
+    background-color: rgba(37, 241, 231, 0.808);
+    color: azure;
+}
 .header{
     background-image: url("https://afktravel.com/wp-content/uploads/2015/08/table-mountain-ocean.jpg");
     background-repeat: no-repeat;
@@ -41,37 +46,58 @@ img{
     padding: 0.6em;
 }
 table, th, td{
-    border: 1px solid cadetblue;
+    border: 2px solid rgb(3, 3, 3);
 }
 tr:nth-child(even){
     background-color: aquamarine;
 }
-.col-5{
-    float: left;
-    width: 50%;
-}
-.union{
-    float: left;
-    width: 33%;
-}
-.church{
-    float: left;
-    width: 33%;
-}
-.ditsong{
-    float: left;
-    width: 33%;
+@media(min-width: 50em){
+    .col-5{
+        float: left;
+        width: 45%;
+    }
+    .union{
+        float: left;
+        width: 33%;
+    }
+    .church{
+        float: right;
+        width: 33%;
+    }
+    .ditsong{
+        float: left;
+        width: 33%;
+    }
+    .Menu{
+        display: flex;
+    }
+    .Menu li{
+        list-style: none;
+        margin: 0em;
+        padding: 2em;
+    }
+    .Menu li{
+        list-style: none;
+    }
+    .Menu a{
+        padding: 1em;
+        display: block;
+        width: 8em;
+    }
+    .Menu a:hover{
+        background-color: rgb(107, 34, 241);
+    }
 }
 h1{
     margin: 3.5em;
-    color:black;
+    color: aliceblue;
 }
 h2{
     display: flex;
     padding: 1em;
 }
 h3{
-    display: flex;
+    display: block;
     padding: 1em;
 }
 .clearfix{
